# FlightSimulator

./: CMakeLists.txt  README.md  clientserver.cpp  clientserver.h  clinetserver.h  command.h  commands.cpp  commands.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  utils.cpp  utils.h
calc/: claculator.cpp  claculator.h  shutting_yard.cpp  shutting_yard.h
